--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h1::before {
     content: " ";
     display: block;
     height: 0.9px;
-    width: 80px;
+    width: 91.65px;
     position: absolute;
     top: 50%;
     left: 0;
@@ -36,7 +36,7 @@ h1::after {
     content: " ";
     display: block;
     height: 0.9px;
-    width: 80px;
+    width: 96.63px;
     position: absolute;
     top: 50%;
     right: 0;
@@ -94,7 +94,7 @@ h1::after {
     font-size: 10px;
     font-weight: 400;
     text-decoration: line-through;
-    color: gray;
+    color: #00000066;
 }
 
 .tag {
@@ -111,7 +111,7 @@ h1::after {
 .inner-box {
     width: 75%;
     display: block;
-    margin: 10px auto;
+    margin: 4px auto;
     overflow: hidden;
 }
 
@@ -206,9 +206,10 @@ input[type='radio'] {
     appearance: none;
     width: 14.46px;
     height: 14.46px;
-    border: 1px solid grey;
+    border: 0.9px solid grey;
     border-radius: 50%;
     outline: none;
+    position: relative;
 }
 
 input[type='radio']:before {
@@ -216,7 +217,11 @@ input[type='radio']:before {
     display: block;
     width: 9.04px;
     height: 9.04px;
-    margin: 2px auto;
+    text-align: center;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
     border-radius: 50%;
 }
 
@@ -225,7 +230,7 @@ input[type='radio']:checked:before {
 }
 
 input:checked {
-    border: 1px solid #FF6B82;
+    border: 0.9px solid #FF6B82;
 }
 
 .total-cost {
@@ -248,5 +253,6 @@ input:checked {
     font-style: italic;
     font-size: 12px;
     font-weight: 400;
-    color: rgb(216, 213, 213);
+    color: #00000066;
+    margin-top: -10px;
 }
